--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
+    "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.4",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -20,7 +20,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "npm-watch": "^0.4.0"
+    "npm-watch": "^0.11.0",
+    "typescript-plugin-css-modules": "^5.0.1"
   },
   "watch": {
     "build": {
