--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.239",
     "npm-watch": "^0.11.0",
     "typescript-plugin-css-modules": "^5.0.1"
   },
@@ -29,7 +30,8 @@
         "styles/**",
         "pages/**",
         "public/**",
-        "next.config.js"
+        "next.config.js",
+        "extension/manifest.json"
       ],
       "ignore": [
         "out",
