--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,5 +12,5 @@
     "default_popup": "index.html",
     "default_title": "Tab Manager"
   },
-  "permissions": ["tabs", "tabGroups"]
+  "permissions": ["tabs", "activeTab", "tabGroups", "storage"]
 }
