refactor: use `Context API` for tab state

--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
         "pages/**",
         "public/**",
         "hooks/**",
+        "context/**",
         "components/**",
         "next.config.js",
         "extension/manifest.json"
