--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tab-manager",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev:extension": "npm-watch",
     "dev": "next dev",
