--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Tab Master",
   "version": "1.0.0",
-  "description": "Introducing a powerful tab management tool that streamlines your browsing experience. Easily navigate through all open tabs across windows, effortlessly drag and drop them into different windows for seamless organization. You can swiftly close tabs, and with the click of a button, bookmark important ones for quick access later. Need to find something specific? No problem! Our built-in search feature lets you locate tabs instantly. Say goodbye to tab clutter and welcome a new era of efficient browsing.",
+  "description": "An powerful tab management tool that offers: navigate, drag & drop, close, bookmark, and instant search functionalities.",
   "icons": {
     "16": "./images/icons8-tab-16.png",
     "32": "./images/icons8-tab-32.png",
