refactor(frontend): remove `tabGroups` permission

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,5 +17,5 @@
       "48": "./images/48_48.png"
     }
   },
-  "permissions": ["tabs", "activeTab", "tabGroups", "storage"]
+  "permissions": ["tabs", "activeTab", "storage"]
 }
