refactor: move `renderHighlighedTitle` into lib/util

--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
         "pages/**",
         "public/**",
         "hooks/**",
+        "lib/**",
         "context/**",
         "components/**",
         "next.config.js",
